force-app/main/default/objects/Work_Order_Operation__c/Work_Order_Operation__c.object-meta.xml
<CustomObject>
    <label>Work Order Operation</label>
    <nameField>
        <label>Work Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>