force-app/main/default/objects/Work_Order_Operation__c/fields/Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Duration__c</fullName>
    <formula>Actual_End_Time__c - Actual_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>