force-app/main/default/objects/Work_Order_Operation__c/fields/Actual_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Time__c</fullName>
    <label>Actual End Time</label>
    <type>DateTime</type>
</CustomField>