force-app/main/default/objects/Work_Order_Operation__c/fields/Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Order_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>