force-app/main/default/objects/Work_Order_Operation__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operation</label>
    <referenceTo>Operation__c</referenceTo>
    <relationshipLabel>Work Order Operations</relationshipLabel>
    <relationshipName>Work_Order_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>